# rusted-invidious

./: Cargo.toml  README.md  config.yaml  config.yaml.example  docker-compose.yml  dockerfile  i18n.toml  nginx.conf  nginxDockerfile  notes.md  preferences.yaml  preferences.yaml.example
assets/js/: player.js  watch.js
i18n/ar/: basic.ftl
i18n/bn/: basic.ftl
i18n/bn_BD/: basic.ftl
i18n/ca/: basic.ftl
i18n/cs/: basic.ftl
i18n/da/: basic.ftl
i18n/de/: basic.ftl
i18n/el/: basic.ftl
i18n/en-US/: basic.ftl
i18n/eo/: basic.ftl
i18n/es/: basic.ftl
i18n/et/: basic.ftl
i18n/eu/: basic.ftl
i18n/fa/: basic.ftl
i18n/fi/: basic.ftl
i18n/fr/: basic.ftl
i18n/he/: basic.ftl
i18n/hi/: basic.ftl
i18n/hr/: basic.ftl
i18n/hu-HU/: basic.ftl
i18n/id/: basic.ftl
i18n/is/: basic.ftl
i18n/it/: basic.ftl
i18n/ja/: basic.ftl
i18n/ko/: basic.ftl
i18n/lt/: basic.ftl
i18n/nb-NO/: basic.ftl
i18n/nl/: basic.ftl
i18n/pl/: basic.ftl
i18n/pt/: basic.ftl
i18n/pt-BR/: basic.ftl
i18n/pt-PT/: basic.ftl
i18n/ro/: basic.ftl
i18n/ru/: basic.ftl
i18n/si/: basic.ftl
i18n/sk/: basic.ftl
i18n/sl/: basic.ftl
i18n/sq/: basic.ftl
i18n/sr/: basic.ftl
i18n/sr_Cyrl/: basic.ftl
i18n/sv-SE/: basic.ftl
i18n/tr/: basic.ftl
i18n/uk/: basic.ftl
i18n/vi/: basic.ftl
i18n/zh-CN/: basic.ftl
i18n/zh-TW/: basic.ftl
src/: config.rs  lib.rs  routes.rs
src/api/: common.rs  error.rs  mod.rs  traits.rs  user.rs
src/api/dash_utils/: mod.rs  types.rs
src/api/piped/: channel.rs  comment.rs  misc.rs  mod.rs  piped_api.rs  playlist.rs  search.rs  trending.rs  utils.rs  video.rs
src/database/: db_manger.rs  mod.rs
src/database/models/: channel.rs  mod.rs  (+8 more)
src/handlers/: channel.rs  feed.rs  home.rs  mod.rs  playlists.rs  search.rs  utils.rs  video.rs
src/logging/: filters.rs  mod.rs
src/routes/: routes.rs
src/structs/: Playlist.rs  Video.rs  channel.rs  mod.rs  player.rs  playlist.rs  template_context.rs  user.rs
templates/: base.html  channel.html  error.html  not_implemented.html  search.html  search_homepage.html  view_playlist.html  watch.html
templates/common/: feed_menu.html  player.html  related_stream.html  related_video.html  search_box.html  search_channel.html  search_item.html  search_playlist.html  subscribe_widget.html  video_context_buttons.html
templates/feeds/: playlists.html  subscriptions.html  trending.html
(+35 files in other folders)
