[package]
name = "rusted-invidious"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
axum ={version= "0.5.6", features = ["form","headers"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["trace"] }
youtubei-rs = "0.1"
askama = "0.11"
envconfig = "0.10"