[package]
name = "rusted-invidious"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum ={version= "0.5", features = ["form","headers"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3", features = ["trace"] }
youtubei-rs = "1.3.4"
serde_yaml = "0.8.24"
fluent = "0.16.0"
fluent-templates = { version = "0.7.1", features = ["tera"] }
askama = {git = "https://github.com/11Tuvork28/askama.git", features = ["localization"]}
askama_axum = "0.1.0"
parking_lot = "^0.12.1"