[package]
name = "rusted-invidious"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum ={version= "0.5", features = ["form","headers"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3", features = ["trace"] }
serde_yaml = "0.9.13"
fluent = "0.16.0"
fluent-templates = { version = "0.8.0" }
askama = {git = "https://github.com/11Tuvork28/askama.git", features = ["localization","serde-json"]}
askama_axum = "0.1.0"
parking_lot = "^0.12.1"
rusted-invidious-types = { git = "https://github.com/11Tuvork28/rusted-invidious-shared.git" }
chrono = "0.4.19"
regex = "1.6.0"
reqwest = { version = "0.11", features = ["gzip","json"] }
axum-macros = "0.2.3"